welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean={
	avance()
	getCouleurSol()
	var x:String=getCouleurSol
	recule()
	if(x=color.green){
		avance()
	} else {
		recule()
	}
	return true
}   
